--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@ body.darkBody{
 
 .main {
     box-shadow: 9px 12px 32px -1px rgba(0, 0, 0, 0.6);
-    width: 475px;
-    height: 625px;
+    padding: 60px 30px;
     border-radius: 24px;
     background-color: #1b1f3d;
     position: absolute;
@@ -55,6 +54,11 @@ div.mainDiv {
     display: flex;
 }
 
+.proVersion{
+    display: none;
+    background-color: chartreuse;
+}
+
 #dark {
     position: absolute;
     right: 50px;
@@ -74,7 +78,7 @@ div.mainDiv {
 
 
 input {
-    width: 410px;
+    width: 325px;
     margin-left: 5px;
     height: 95px;
     margin-top: -15px;
